moved publication files to cite folder

--- a/content/publications/conference-paper/cite.bib
+++ b/content/publications/conference-paper/cite.bib
@@ -6,3 +6,96 @@
   year={2013},
   organization={IEEE}
 }
+@inproceedings{subburaman2025whole,
+  title={A Whole-Body Multi Contact Large Object Manipulation and Estimation Framework for Humanoids Using Skin Patches},
+  author={Subburaman, Rajesh and Stasse, Olivier},
+  booktitle={2025 IEEE-RAS 24th International Conference on Humanoid Robots (Humanoids)},
+  pages={1--8},
+  year={2025},
+  organization={IEEE}
+}
+
+@inproceedings{subburaman2024delay,
+  title={Delay robust model predictive control for whole-body torque control of humanoids},
+  author={Subburaman, Rajesh and Stasse, Olivier},
+  booktitle={2024 IEEE-RAS 23rd International Conference on Humanoid Robots (Humanoids)},
+  pages={600--606},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{subburaman2023survey,
+  title={A survey on control of humanoid fall over},
+  author={Subburaman, Rajesh and Kanoulas, Dimitrios and Tsagarakis, Nikos and Lee, Jinoh},
+  journal={Robotics and Autonomous Systems},
+  volume={166},
+  pages={104443},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{subburaman2023non,
+  title={A non-prehensile object transportation framework with adaptive tilting based on quadratic programming},
+  author={Subburaman, Rajesh and Selvaggio, Mario and Ruggiero, Fabio},
+  journal={IEEE Robotics and Automation Letters},
+  volume={8},
+  number={6},
+  pages={3581--3588},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{subburaman2021analysis,
+  title={An Analysis on the Modeling Accuracy of Industrial Manipulators with Inherent Joint Elasticity},
+  author={Subburaman, Rajesh and D’Imperio, Mariapaola and Lee, Jinoh and Cannella, Ferdinando},
+  booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={8246--8253},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{subburaman2019human,
+  title={Human inspired fall prediction method for humanoid robots},
+  author={Subburaman, Rajesh and Kanoulas, Dimitrios and Muratore, Luca and Tsagarakis, Nikos G and Lee, Jinoh},
+  journal={Robotics and Autonomous Systems},
+  volume={121},
+  pages={103257},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@inproceedings{subburaman2018online,
+  title={Online rolling motion generation for humanoid falls based on active energy control concepts},
+  author={Subburaman, Rajesh and Tsagarakis, Nikos G and Lee, Jinoh},
+  booktitle={2018 IEEE-RAS 18th International Conference on Humanoid Robots (Humanoids)},
+  pages={1--7},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{subburaman2018online,
+  title={Online falling-over control of humanoids exploiting energy shaping and distribution methods},
+  author={Subburaman, Rajesh and Lee, Jinoh and Caldwell, Darwin G and Tsagarakis, Nikos G},
+  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={448--454},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{lee2016active,
+  title={An active compliant impact protection system for humanoids: Application to walk-man hands},
+  author={Lee, Jinoh and Choi, Wooseok and Kanoulas, Dimitrios and Subburaman, Rajesh and Caldwell, Darwin G and Tsagarakis, Nikolaos G},
+  booktitle={2016 IEEE-RAS 16th International Conference on Humanoid Robots (Humanoids)},
+  pages={778--785},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{subburaman2016multi,
+  title={Multi-sensor based fall prediction method for humanoid robots},
+  author={Subburaman, Rajesh and Lee, Jinoh and Caldwell, Darwin G and Tsagarakis, Nikos G},
+  booktitle={2016 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)},
+  pages={102--108},
+  year={2016},
+  organization={IEEE}
+}
